# meltano-pipeline-serializer

./: README.md  pyproject.toml
pipelineserializer_ext/: __init__.py  extension.py  main.py
